Attach Accept: signed-exchange headers for prefetch

This patch adds "Accept: application/signed-exchange;v=b1;q=0.9, */*;q=0.8"
request header to prefetch requests when the SignedHTTPExchange feature is
enabled.

The header is added in Blink side, so this patch wires up the
SignedHTTPExchange feature to a blink runtime flag.

Bug: 874752
Change-Id: I25c15e3ebaf64455638f93e353fd9e91086ac223
Reviewed-on: https://chromium-review.googlesource.com/1184722
Commit-Queue: Kunihiko Sakamoto <ksakamoto@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585442}
Former-commit-id: 0e52eda37754c557cf5d3edc929d536a7906eb88